--- a/Unit2/Max_BentU2proj.ipynb
+++ b/Unit2/Max_BentU2proj.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPCGa7v9jQOcZ1+5uEF4mR/",
+      "authorship_tag": "ABX9TyP+kDfeeBFIZovZHLvCcz0d",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -177,7 +177,7 @@
       "source": [
         "As you can see, our prior expects Schwellenbach's strikeout rate to be somewhere around 27%, with the median, mean and mode all rounding to that number. The mean is the most bullish on Schwellenbach's strikeout rate, while the mode is the most bearish, but they're all pretty similar.\n",
         "\n",
-        "Spencer Schwellenbach struck out a total of 107 batters across 401 batters faced in 97.1 innings so far this season [according to FanGraphs](https://). We'll use this for the binomial distribution, or likelihood.\n",
+        "Spencer Schwellenbach struck out a total of 107 batters across 401 batters faced in 97.1 innings so far this season [according to FanGraphs](https://www.fangraphs.com/players/spencer-schwellenbach/31846/stats?position=P). We'll use this for the binomial distribution, or likelihood.\n",
         "\n",
         "The below code outlines the beginning of a model meant to project Schwellenbach's \"K-rate\" (the shorthand for strikeout in the box score and colloquially is \"K\"). This is largely based on code from the Unit 2 notes."
       ],
