--- a/Unit2/Max_BentU2proj.ipynb
+++ b/Unit2/Max_BentU2proj.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP+kDfeeBFIZovZHLvCcz0d",
+      "authorship_tag": "ABX9TyMr5jSu/OsQNU5YeP7K5zos",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
         "outputId": "151a668d-7503-4a95-c32a-c67785f7597c",
         "collapsed": true
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "I don't watch baseball, so I can't give a prior based on the \"eye test\", but looking at his peripheral statistics (mainly his called strike and whiff rate, or CSW%, which correlates heavily with strikeout rate) makes him look like a high-strikeout pitcher, so I'll guess his true strikeout rate is around 27%, which is rated as \"excellent\" per [this FanGraphs guide](https://library.fangraphs.com/pitching/rate-stats/). The game has changed slightly since this article was published--the average strikeout rate for starting pitchers in 2024 is nearly 2% higher than the \"average\" listed here, so 27% is really just solidly above average. I'll use this as my beta distribution, or prior.\n",
+        "I don't watch the Braves, so I can't give a prior based on the \"eye test\", but looking at his peripheral statistics (mainly his called strike and whiff rate, or CSW%, which correlates heavily with strikeout rate) makes him look like a high-strikeout pitcher, so I'll guess his true strikeout rate is around 27%, which is rated as \"excellent\" per [this FanGraphs guide](https://library.fangraphs.com/pitching/rate-stats/). The game has changed slightly since this article was published--the [average strikeout rate for starting pitchers](https://www.fangraphs.com/leaders/major-league?pos=all&lg=all&qual=y&type=1&month=0&ind=0&sortcol=0&sortdir=default&stats=sta&team=0%2Css&startdate=&enddate=&season1=2000&season=2024) in 2024 is nearly 2% higher than the \"average\" listed here, so 27% is really just solidly above average. I'll use this as my beta distribution, or prior.\n",
         "\n",
         "Here's a graph of the probability density function of my prior:"
       ],
@@ -151,7 +151,7 @@
         "id": "dJAS5c5XRBM9",
         "outputId": "e9534804-82be-43fb-fb06-9baed11c91fe"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,7 +216,7 @@
         "id": "l-buoUnmDNTz",
         "outputId": "6a849be8-3eb4-4362-9247-39b8b81add67"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -330,7 +330,7 @@
         "id": "JPuvDt7G7U_e",
         "outputId": "86080c9f-c569-4514-d21a-066046b98f96"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -357,7 +357,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This looks pretty reasonable to me! The model's mean is a strikeout rate of 27%, which is what I projected (and the likelihood stated), with the upper bound of the HDI being 31% (an elite strikeout rate - this year only 3 pitchers exceeded that number, including both of the projected Cy Young Award winners) and the lower bound being 23% (about average). If there's anything wrong with this model, it's that it might be a bit too confident - I don't think ~100 innings is large enough of a sample size to confidentally shout \"Spencer Schwellenbach is an above-average pitcher\" to the heavens."
+        "This looks pretty reasonable to me! The model's mean is a strikeout rate of 27%, which is what I projected (and the likelihood stated), with the upper bound of the HDI being 31% (an elite strikeout rate - this year [only 3 pitchers](https://www.fangraphs.com/leaders/major-league?pos=all&lg=all&qual=y&type=1&month=0&ind=0&sortcol=6&sortdir=default&stats=sta&startdate=&enddate=&team=0&season1=2024&season=2024&pagenum=1) exceeded that number, including both of the projected Cy Young Award winners) and the lower bound being 23% (about average). If there's anything wrong with this model, it's that it might be a bit too confident - I don't think ~100 innings is large enough of a sample size to confidentally shout \"Spencer Schwellenbach is an above-average pitcher\" to the heavens."
       ],
       "metadata": {
         "id": "ur861NYiT3Mq"
