--- a/Unit3/Max_Bentley_Unit3ExercisesSF.ipynb
+++ b/Unit3/Max_Bentley_Unit3ExercisesSF.ipynb
@@ -533,26 +533,29 @@
       "cell_type": "code",
       "source": [
         "# Beta(96, 42)\n",
-        "pz.Beta(alpha = 1., beta = 1.).moments()"
+        "pz.Beta(alpha = 96., beta = 42.).moments()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "aU66RFzFBHhN",
-        "outputId": "7689905f-8c67-4c8e-8c20-7ba30d804857"
+        "outputId": "f34c5fe6-346d-4078-8917-e14b00b65421"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.5, 0.08333333333333333, array(0.), -1.2]"
+              "[0.6956521739130435,\n",
+              " 0.0015231670995906488,\n",
+              " -0.14323292412687752,\n",
+              " -0.011997937472861485]"
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 5
         }
       ]
     },
@@ -639,6 +642,21 @@
           "execution_count": 26
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The distribution with the greatest mean is the alpha = 96 and beta = 42 beta distribution (about 0.70), whereas the distribution with the smallest is the alpha = 7 and beta = 11 beta distribution (about 0.39).\n",
+        "\n",
+        "The distribution with the greatest variance is the alpha = 0.8 and beta = 0.9 beta distribution (about 0.09) whereas the distribution with the smallest is the alpha = 500 and beta = 500 beta distribution (about 0.0002).\n",
+        "\n",
+        "The distribution with the greatest skew is a tie between the alpha = 1, beta = 2 beta distribution and the alpha = 2, beta = 1 beta distribution (with a negative and positive value of about 0.57, respectively), whereas the distribution with the least skew is a tie between the beta(1,1), the beta(500,500), the beta(0.9,0.9) and the beta(5,5) with 0.\n",
+        "\n",
+        "The distribution with the greatest kurtosis is the beta(0.8,0.9) distribution with a magnitude of about 1.26 whereas the distribution with the smallest kurtosis is the beta(500,500) with a magnitude of about 0.006."
+      ],
+      "metadata": {
+        "id": "7v9OLhvBe-8d"
+      }
     },
     {
       "cell_type": "markdown",
