--- a/Unit4/Max_BentU4Proj.ipynb
+++ b/Unit4/Max_BentU4Proj.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIRBUn+2U5crP5iwDfATT1",
+      "authorship_tag": "ABX9TyPLZaDfJEjbxZSeZkSdgTSY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5805,9 +5805,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "<a name=\"cite_ref-1\"></a>[<sup>[1]</sup>](#cite_note-1) Or, if you're Shohei Ohtani, you can just be both a full-time pitcher and full-time DH!\n",
+        "<a name=\"cite_note-1\"></a>[<sup>[1]</sup>](#cite_ref-1) Or, if you're Shohei Ohtani, you can just be both a full-time pitcher and full-time DH!\n",
         "\n",
-        "<a name=\"cite_ref-2\"></a>[<sup>[2]</sup>](#cite_note-2) To elaborate, I thought this difference in skew is notable--DHs are almost exclusively power hitters, so there will be more hitters that have bat speeds greater than the mode, as they might have to overcompensate for poor baserunning, whereas second basemen are more valued for their defensive prowess, so there will be less pressure to be a power hitter (their builds are different) and so more second basemen will have a lower bat speed than the mode."
+        "<a name=\"cite_note-2\"></a>[<sup>[2]</sup>](#cite_ref-2) To elaborate, I thought this difference in skew is notable--DHs are almost exclusively power hitters, so there will be more hitters that have bat speeds greater than the mode, as they might have to overcompensate for poor baserunning, whereas second basemen are more valued for their defensive prowess, so there will be less pressure to be a power hitter (their builds are different) and so more second basemen will have a lower bat speed than the mode."
       ],
       "metadata": {
         "id": "NgJW9e3w8rqg"
