--- a/Unit9/Unit_9_Final_Project.ipynb
+++ b/Unit9/Unit_9_Final_Project.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [
         "w_C43u8HAyzH"
       ],
-      "authorship_tag": "ABX9TyOd5DQtf8FdRXg3vq1jG/cg",
+      "authorship_tag": "ABX9TyPgZb83NjaAOTdQmk46K+bH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2174,7 +2174,8 @@
         "One of the biggest hurdles with CNNs is that making and cleaning datasets is a lot more involved, since you're more likely than not working with formats that are a bit more complicated than just spreadsheets--you're working with images, audio, etc. This requires a lot more processing power, so I switched Colab to running on the GPU instead of CPU cores, which are slower.\n",
         "\n",
         "Importing the dataset is pretty tough on its own - to simplify, I just uploaded the dataset to my Google Drive and mounted it instead of having to deal with Colab's filesystem without terminal access.\n",
-        "\n"
+        "\n",
+        "A common way to help train NNs is to apply a bunch of random transformations to the training dataset to \"augment\" the data or increase the size of the dataset - this is supposed to make the model learn more effectively, as it has more examples to go off of."
       ],
       "metadata": {
         "id": "BolsU4inugeH"
@@ -3125,7 +3126,7 @@
       "source": [
         "That's not very good. The accuracy (test_acc) hovers a little over 25%, which is only slightly better than how you would do if you were just randomly guessing.\n",
         "\n",
-        "Let's visualize the loss curves for this model (as always, function code copied from learnpytorch.io)"
+        "Let's visualize the loss curves for this model (function code copied from learnpytorch.io)"
       ],
       "metadata": {
         "id": "gXLol5QDaOJG"
@@ -3211,9 +3212,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This is terrible!\n",
+        "This is terrible! It's super noisy and basically not learning anything.\n",
         "\n",
-        "Let's add a few more layers to our model. Below is the TinyVGG model, a commonly used image recognition model to explain how CNNs work, as seen on this helpful [CNN Explainer](https://poloclub.github.io/cnn-explainer/)."
+        "Let's add a few more layers to our model. Below is the TinyVGG model, a commonly used image recognition model to explain how CNNs work, as seen on this helpful [CNN Explainer](https://poloclub.github.io/cnn-explainer/). It consists of four convolutional layers, four ReLU activations and two 2D Max Pool layers, which take the better of the two previously-run layers."
       ],
       "metadata": {
         "id": "GDOTQ4m_uU8V"
@@ -3464,7 +3465,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The model isn't improving that much, and arguably it's getting worse; the loss is pretty noisy and the accuracy is still remaining small (outside of a random spike in epoch 2). It also is seemingly overfitting in the last several epochs. This is interesting given that the architecture is relatively well-known: TinyVGG is often used as a way of teaching people how image recognition using CNNs work, so it should have worked somewhat well on its own.\n",
+        "The model isn't improving that much over the previous one, and arguably it's getting worse; the loss is pretty noisy and the accuracy is still remaining small (outside of a random spike in epoch 2). It also is seemingly overfitting in the last several epochs. This is interesting given that the architecture is relatively well-known: TinyVGG is often used as a way of teaching people how image recognition using CNNs work, so it should have worked somewhat well on its own.\n",
         "\n",
         "Let's set our sights on some other way of improving the model outside of the structure itself. I set the learning rate of the optimizer to 0.1, which might be pretty high; let's see what happens when we lower it by a factor of 100."
       ],
@@ -3650,7 +3651,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Whoa! That's a *lot* better. There's actually some sort of trend with our accuracy and loss, which is a great sign. Let's see how the other architecture does:"
+        "Whoa! That's a *lot* better. There's actually some sort of trend with our accuracy and loss, which is a great sign. It's even getting to double the accuracy as the other one, which is really good! Let's see how the other architecture does:"
       ],
       "metadata": {
         "id": "t8u5PKuS2SnV"
@@ -4358,7 +4359,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "I'm gonna be honest, I could probably do a lot better. The best model still only barely cracked 50% accuracy, and trying out different images on each of these models leaves me super unsatisfied that any one model is much better than the rest. On this Charmander image, model 5 is far and away the best, on other images, it's a lot less correct; on some images, model 3 works the best, on this one it's pretty bad.\n",
+        "I'm gonna be honest, looking at these results makes me think I could probably do a lot better. The best model still only barely cracked 50% accuracy, and trying out different images on each of these models leaves me super unsatisfied that any one model is much better than the rest. On this Charmander image, model 5 is far and away the best, on other images, it's a lot less correct; on some images, model 3 works the best, on this one it's pretty bad.\n",
         "\n",
         "Let's try running models 3 and 5 a bit longer, considering those worked the best."
       ],
